Header with correct spacing

--- a/src/app/components/nav/nav.component.scss
+++ b/src/app/components/nav/nav.component.scss
@@ -6,11 +6,13 @@
 .primary-container {
   position: fixed;
   top: 0;
-  left: 0;
-  width: 100%;
   z-index: 1000;
   background-color: var(--mat-sys-inverse-primary);
   border-bottom-right-radius: 1rem;
+  height: 64px;
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
 }
 
 .sidenav-container {
